--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Admin - DriveNow</title>
+    <title>Login - Retbill</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -17,7 +17,7 @@
     <div class="row justify-content-center align-items-center" style="min-height: 100vh;">
         <div class="col-11 col-sm-8 col-md-5 col-lg-4">
             <div class="card login-card p-4 p-md-5 shadow-lg text-center border-0" style="border-radius: 25px;">
-                <h2 class="fw-bold mb-4" style="letter-spacing: 1px;">Admin Login</h2>
+                <h2 class="fw-bold mb-4" style="letter-spacing: 1px;">RETBILL #1</h2>
                 <div class="mb-3">
                     <input type="text" id="user" class="form-control form-control-lg" placeholder="Username Admin" style="font-size: 1rem;">
                 </div>
@@ -43,10 +43,11 @@
                 localStorage.setItem('role', 'admin');
                 window.location.href = 'beranda.html';
             } else {
-                alert("Akses Ditolak! Hanya Admin yang boleh masuk.");
+                alert("Akses Ditolak! Password/Username Anda Salah!!");
             }
         }
     </script>
     
 </body>
+
 </html>
