--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,12 @@
             <hr>
             <div class="text-start">
                 <p><b>Mata Kuliah:</b> Pemrograman Web 1</p>
+               <p><b>NIM:</b> 251011700718</p>
                 <p><b>Sebagai:</b> CEO RETBILL</p>
             </div>
             <a href="beranda.html" class="btn btn-primary mt-4 bg-dark">Back to Dashboard</a>
         </div>
     </div>
 </body>
+
 </html>
