--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
             <p class="text-muted">Mahasiswa Sistem Informasi Universitas Pamulang S1</p>
             <hr>
             <div class="text-start">
-                <p><b>Mata Kuliah:</b> Pemrograman Web 1</p>
+                <p><b>Mata Kuliah:</b> 251011700718</p>
                 <p><b>NIM:</b> 251011700718</p>
                 <p><b>Sebagai:</b> CEO RETBILL</p>
             </div>
@@ -25,4 +25,5 @@
 </body>
 
 </html>
+
 
